infra/non-prod/grafana/AWS/cloudformation/Monitoring-Template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
      "ClusterName": {
        "Description": "Name for ECS cluster",
        "Type": "String",
        "Default": "MonitoringAPICluster"
      },
      "VpcId": {
        "Type": "AWS::EC2::VPC::Id",
        "Description": "VPC Id"
      },
      "SubnetIds": {
        "Type": "List<AWS::EC2::Subnet::Id>",
        "Description": "Subnet Ids"
      }
    },
    "Resources": {
      "ECSCluster": {
        "Type": "AWS::ECS::Cluster",
        "Properties": {
          "ClusterName": {
            "Ref": "ClusterName"
          }
        }
      },
      "SecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Allow HTTP access",
          "VpcId": {
            "Ref": "VpcId"
          },
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": 80,
              "ToPort": 80,
              "CidrIp": "0.0.0.0/0"
            },
            {
              "IpProtocol": "tcp",
              "FromPort": 3000,
              "ToPort": 3000,
              "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      },
      "GrafanaTaskDefinition": {
        "Type": "AWS::ECS::TaskDefinition",
        "Properties": {
          "Family": "grafana-taskv1",
          "NetworkMode": "awsvpc",
          "RequiresCompatibilities": [
            "FARGATE"
          ],
          "Cpu": "512",
          "Memory": "1024",
          "TaskRoleArn": "arn:aws:iam::33733352:role/ecsTaskExecutionRole", // Please adjust these arns if there is not such role. Please create one for ecs task execution.
          "ExecutionRoleArn": "arn:aws:iam::33733352:role/ecsTaskExecutionRole", // Please adjust these arns if there is not such role. Please create one for ecs task execution.
          "ContainerDefinitions": [
            {
              "Name": "grafana",
              "Image": "public.ecr.aws/ubuntu/grafana:11.0.0-22.04_stable",
              "PortMappings": [
                {
                  "ContainerPort": 3000
                }
              ],
              "LogConfiguration": {
                "logDriver": "awslogs",
                "options": {
                  "awslogs-group": "/ecs/grafana-td",
                  "awslogs-create-group": "true",
                  "awslogs-region": "eu-west-2",
                  "awslogs-stream-prefix": "ecs"
                }
              }
            }
          ]
        }
      },
      "GrafanaService": {
        "Type": "AWS::ECS::Service",
        "DependsOn": [
          "GrafanaALB",
          "GrafanaTargetGroup",
          "GrafanaListener"
        ],
        "Properties": {
          "Cluster": {
            "Ref": "ECSCluster"
          },
          "TaskDefinition": {
            "Ref": "GrafanaTaskDefinition"
          },
          "DesiredCount": 1,
          "LoadBalancers": [
            {
              "ContainerName": "grafana",
              "ContainerPort": 3000,
              "TargetGroupArn": {
                "Ref": "GrafanaTargetGroup"
              }
            }
          ],
          "LaunchType": "FARGATE",
          "NetworkConfiguration": {
            "AwsvpcConfiguration": {
              "Subnets": {
                "Ref": "SubnetIds"
              },
              "SecurityGroups": [
                {
                  "Ref": "SecurityGroup"
                }
              ],
              "AssignPublicIp": "ENABLED"
            }
          }
        }
      },
      "GrafanaALB": {
        "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
        "Properties": {
          "Name": "GrafanaALB",
          "Subnets": {
            "Ref": "SubnetIds"
          },
          "SecurityGroups": [
            {
              "Ref": "SecurityGroup"
            }
          ],
          "Scheme": "internet-facing",
          "LoadBalancerAttributes": [
            {
              "Key": "idle_timeout.timeout_seconds",
              "Value": "60"
            }
          ]
        }
      },
      "GrafanaTargetGroup": {
        "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
        "Properties": {
          "Name": "GrafanaTargetGroup",
          "Port": 3000,
          "Protocol": "HTTP",
          "VpcId": {
            "Ref": "VpcId"
          },
          "HealthCheckProtocol": "HTTP",
          "HealthCheckPort": "3000",
          "HealthCheckPath": "/api/health",
          "TargetType": "ip"
        }
      },
      "GrafanaListener": {
        "Type": "AWS::ElasticLoadBalancingV2::Listener",
        "Properties": {
          "DefaultActions": [
            {
              "Type": "forward",
              "TargetGroupArn": {
                "Ref": "GrafanaTargetGroup"
              }
            }
          ],
          "LoadBalancerArn": {
            "Ref": "GrafanaALB"
          },
          "Port": 3000,
          "Protocol": "HTTP"
        }
      }
    },
    "Outputs": {
      "GrafanaLoadBalancerDNS": {
        "Description": "The DNS name of the load balancer for the Grafana service",
        "Value": {
          "Fn::GetAtt": [
            "GrafanaALB",
            "DNSName"
          ]
        }
      }
    }
  }
